overflow hidden issue
overflow hidden make big numbers not visible so if you need to visible it, I think its good idea
to know new property called overflow-wrap can make break-word for numbers

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ img {
   text-align: right;
   font-size: 2rem;
   color: #eee;
-  overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 /* keys */
